--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="gallery-parent">
+    <section class="gallery-parent">
         <div class="gallery-child">
             <img src="media/heart.jpg" class="gallery heart">
             <img src="media/winter.jpg" class="gallery winter">
             <img src="media/dog.jpg" class="gallery dog">
         </div>
-    </div>
+    </section>
 </body>
 </html>
