--- a/index.html
+++ b/index.html
@@ -4,15 +4,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style/style.scss">
-    <title>Document</title>
+    <link rel="icon" href="css/img/logo.png">
+    <title>Winter is Wonderful</title>
 </head>
 <body>
-    <section class="gallery-parent">
-        <div class="gallery-child">
-            <img src="media/heart.jpg" class="gallery heart">
-            <img src="media/winter.jpg" class="gallery winter">
-            <img src="media/dog.jpg" class="gallery dog">
+    <div class="container">
+        <a href="#" class="button">Winter is...</a>
+        <img class="chocolate" src="media/hot chocolate.jpg">
+        <div class="text">
+            Winter
         </div>
-    </section>
+        <div class="gallery-parent">
+            <div class="gallery-child">
+                <img src="media/heart.jpg" class="gallery heart">
+                <img src="media/winter.jpg" class="gallery winter">
+                <img src="media/dog.jpg" class="gallery dog">
+            </div>
+        </div>
+        <div class="alaska">
+            <img class="alaska-pic" src="media/alaska.jpg">
+            <h1 class="alaska-header">
+                Alaska
+            </h1>
+        </div>
 </body>
 </html>
