--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style/style.scss">
+    <link rel="stylesheet" href="style/style.css">
     <link rel="icon" href="css/img/logo.png">
     <title>Winter is Wonderful</title>
 </head>
 <body>
     <div class="container">
-        <a href="#" class="button">Winter is...</a>
+        <!-- <a href="#" class="button">Winter is...</a> -->
         <img class="chocolate" src="media/hot chocolate.jpg">
-        <div class="text">
+        <!-- <div class="text">
             Winter
         </div>
         <div class="gallery-parent">
@@ -26,6 +26,6 @@
             <h1 class="alaska-header">
                 Alaska
             </h1>
-        </div>
+        </div> -->
 </body>
 </html>
