--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <div class="container">
         <!-- <a href="#" class="button">Winter is...</a> -->
         <img class="chocolate" src="media/hot chocolate.jpg">
-        <!-- <div class="text">
-            Winter
-        </div>
+        <div class="text-effect"> Winter </div>
         <div class="gallery-parent">
             <div class="gallery-child">
                 <img src="media/heart.jpg" class="gallery heart">
@@ -21,11 +19,12 @@
                 <img src="media/dog.jpg" class="gallery dog">
             </div>
         </div>
-        <div class="alaska">
+        <!-- <div class="alaska">
             <img class="alaska-pic" src="media/alaska.jpg">
             <h1 class="alaska-header">
                 Alaska
             </h1>
         </div> -->
+    </div>
 </body>
 </html>
