--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
                 <img src="media/dog.jpg" class="gallery dog">
             </div>
         </div>
-        <!-- <div class="alaska">
+        <div class="alaska">
             <img class="alaska-pic" src="media/alaska.jpg">
             <h1 class="alaska-header">
                 Alaska
             </h1>
-        </div> -->
-    </div>
+        </div>
 </body>
 </html>
