--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <!-- <a href="#" class="button">Winter is...</a> -->
+        <a href="#" class="button">Winter is...?</a>
         <img class="chocolate" src="media/hot chocolate.jpg">
         <div class="text-effect"> Winter </div>
         <div class="gallery-parent">
