--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="icon" href="css/img/logo.png">
+    <link rel="icon" href="media/logo.png">
     <title>Winter is Wonderful</title>
 </head>
 <body>
     <div class="container">
-        <a href="#" class="button">Winter is...?</a>
-        <img class="chocolate" src="media/hot chocolate.jpg">
         <div class="text-effect"> Winter </div>
+        <a href="#" class="button button-color">Wonderful</a>
+        <img class="chocolate" src="media/hot chocolate.jpg">
         <div class="gallery-parent">
             <div class="gallery-child">
                 <img src="media/heart.jpg" class="gallery heart">
