--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="alaska">
-            <img class="alaska-pic" src="media/alaska.jpg">
+            <img class="alaska-pic" src="media/alaska2.jpg">
             <h1 class="alaska-header">
                 Alaska
             </h1>
