--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="text-effect"> Winter </div>
-        <a href="#" class="button button-color">Wonderful</a>
+        <a href="#" class="button button-color">Wonderland</a>
         <img class="chocolate" src="media/hot chocolate.jpg">
         <div class="gallery-parent">
             <div class="gallery-child">
